/*
 * $Id: ChangeLog,v 1.1719 2003/11/14 03:15:11 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-14 17:30 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbhashapi.h
  * source/vm/hash.c
    + Added hb_hashGetKeys() and hb_hashGetValues() to the internal api, HGETKEYS()
      and HGETVALUES() now refer to this one

  * source/rtl/cstr.prg
    ! Using now "=>" as hash separator in ValToPrg()

  * source/vm/hvm.c
    + Added ":" accessor token to hashes. Currently, it uses the UPPERCASED message
      name; it should be good for translating old programs unless they make differences
      between character cases. Hashes reply also to CLASSNAME, KEYS, VALUES and CLASSH
      messages.

  * tests/hash.prg
    + Added test of new ":" grammar

2003-11-14 00:15 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! Avoid execution of ::ParsePict() if ::HasFocus is FALSE
      Reported by Luis Krause Mantilla

2003-11-13 17:17 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbclass.ch
    * Added few missing escapes (\) in STRICT_OO mode.

  * utils/hbpp/hbpp.c
    * Fixed to produce escape charcaters for compiled [ and ].

  * source/pp/pptable.c
    - Removed TAssociativeArray support.
    * Modified Hash() support to use => instead of :>
    * Consolidated Hash() support into 1 directive.

  + include/assocarr.ch
    + New header with TAssociativeArray() support.

  * tests/assocarr.prg
    + Added #include "assocarr.ch"

2003-11-13 00:45 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * source/rtl/hboutdebug.c
    ! Prevents opening xterm if 1) xterm is not found or 2) not using X (under
      UNIX).
    ! Better error checking and recover system.

2003-11-12 22:48 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>